<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">MarryCarRent</string>
    <string name="title_activity_flzs">FlzsActivity</string>
    <string name="zcpp">租车品牌</string>
    <string name="zjzc">自驾租车</string>
    <string name="swzc">商务租车</string>
    <string name="lyzc">旅游租车</string>
    <string name="gxc">个性车</string>
    <string name="jjx">经济型</string>
    <string name="sdjcx">手动紧凑型</string>
    <string name="hdyc">活动用车</string>
    <string name="tjcp">推荐产品</string>
    <string name="bm">宝马</string>
    <string name="bc">奔驰</string>
    <string name="tj">婚车推荐问答</string>
    <string name="jgtj">婚车都是同一价位的？</string>
    <string name="ystj">婚车都是同一颜色的？</string>
    <string name="pptj">婚车都是同一品牌的？</string>
    <string name="lxtj">婚车都是不同类型的？</string>
    <string name="xntj">婚车都是不同性能的？</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="next_button">下一问</string>
    <string name="correct_toast">回答正确!</string>
    <string name="incorrect_toast">回答错误!</string>
    <string name="zz">您确定要查看答案么？</string>

    <string name="text">我们的婚车是包含好几种价位的，日租金几千到几万元不等，颜色各异，分为好几种不同的品牌，奔驰，宝马，大众，丰田应有尽有，并且包含不同的类型，有自动挡与手动挡，是您婚礼上最好的婚车选择，祝您婚姻愉快！！！</string>
    <string name="show_answer_button">SHOW ANSWER</string>
    <string name="cheat_button">查看答案详情</string>
    <string name="judgment_toast">您偷偷看了答案呦！</string>
    <string name="action_settings">Settings</string>
    <string name="dingdan_title_hint">请留下您对我们该款车的宝贵意见：</string>
    <string name="dingdan_title_label">欢迎您对该款车进行评价留言</string>
    <string name="dingdan_details_label">留言时间</string>
    <string name="dingdan_solved_label">确认留言？</string>
    <string name="xiexie">亲，谢谢您为我们留下的宝贵意见！</string>
    <string name="date_picker_title">Date of dingdan:</string>
    <string name="new_dingdan">新留言</string>
    <string name="show_subtitle">显示留言数量</string>
    <string name="hide_subtitle">点击留言信息</string>
    <string name="subtitle_fformat">%1$s 留言</string>
    <string name="dianhua">拨打电话</string>
    <string name="jiageyouhui">价格优惠 ></string>
    <string name="jiage">比市场价格低30%以上</string>
    <string name="chexingfenfu">车型丰富 ></string>
    <string name="chexin">车型丰富满足您个性化需求</string>
    <string name="fangxinzuche">放心租车 ></string>
    <string name="fangxin">车源100%验真，平台担保交易</string>
    <string name="LIJI">立即找婚车</string>
    <string name="YOUHUI">活动内容：
1.租车日限公里数从原先的260公里增加到300公里（非活动期间日限公里为260公里/天）
2、全部车型7折优惠，最低车型60元起租
3.老客户生日当天免费用车
4、长租更优惠（月租优惠1000-2000元）
5、免费赠送车辆全保险
6、免费提供接车、送车服务
</string>
    <string name="login_label_username">账号</string>
    <string name="login_username_hint">Email或手机号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登陆</string>
    <string name="login_register_link">没有账号？快速注册<a href="#" mce_href="#">注册</a></string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="account_empty">用户名为空，请重新输入！</string>
    <string name="pwd_empty">密码为空，请重新输入！</string>
    <string name="pwd_not_fit_user">密码不正确，请重新输入！</string>
    <string name="pwd_new_empty">新密码为空，请重新输入！</string>
    <string name="pwd_check_empty">密码确认为空，请重新输入！</string>
    <string name="pwd_not_the_same">密码确认不正确，请重新输入密码！</string>
    <string name="register_fail">注册用户失败，请重新尝试！</string>
    <string name="register_success">注册成功！</string>
    <string name="resetpwd_fail">密码修改失败，请重新尝试！</string>
    <string name="resetpwd_success">密码修改成功！</string>
    <string name="login_success">登陆成功！</string>
    <string name="login_fail">登录失败！请输入正确的用户名与密码！</string>
    <string name="name_already_exist">用户名【<xliff:g example="tom" id="id1">%1$s</xliff:g>】已存在，请重新输入！</string>
    <string name="name_not_exist">用户名【<xliff:g example="tom" id="id1">%1$s</xliff:g>】不存在，请重新输入！</string>
    <string name="user_login_success">用户：<xliff:g example="tom" id="id2">%1$s</xliff:g>登录，欢迎光临！</string>

</resources>
