<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/niha"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="17dp">
            <ImageButton
                android:id="@+id/zuchepinpai"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/j"/>

            <ImageButton
                android:id="@+id/zijiazuche"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="22dp"
                android:src="@drawable/i"/>
            <ImageButton
                android:id="@+id/shangwuzuche"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="22dp"
                android:src="@drawable/k"/>
            <ImageButton
                android:id="@+id/lvyouzuche"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="22dp"
                android:src="@drawable/l"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="17dp">
            <TextView
                android:id="@+id/zcpp"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginLeft="11dp"
                android:textSize="13dp"
                android:text="@string/zcpp"/>
            <TextView
                android:id="@+id/zjzc"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginLeft="22dp"
                android:textSize="13dp"
                android:text="@string/zjzc"/>
            <TextView
                android:id="@+id/swzc"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginLeft="22dp"
                android:textSize="13dp"
                android:text="@string/swzc"/>
            <TextView
                android:id="@+id/lyzc"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginLeft="22dp"
                android:textSize="13dp"
                android:text="@string/lyzc"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="17dp">
            <ImageButton
                android:id="@+id/gexingche"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/n"/>

            <ImageButton
                android:id="@+id/jingjixing"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="22dp"
                android:src="@drawable/q"/>
            <ImageButton
                android:id="@+id/shoudongjincouxing"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="22dp"
                android:src="@drawable/p"/>
            <ImageButton
                android:id="@+id/huodongyongche"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="22dp"
                android:src="@drawable/m"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="17dp">
            <TextView
                android:id="@+id/gxc"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginLeft="11dp"
                android:textSize="13dp"
                android:text="@string/gxc"/>
            <TextView
                android:id="@+id/jjx"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginLeft="22dp"
                android:textSize="13dp"
                android:text="@string/jjx"/>
            <TextView
                android:id="@+id/sdjcx"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginLeft="22dp"
                android:textSize="13dp"
                android:text="@string/sdjcx"/>
            <TextView
                android:id="@+id/hdyc"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginLeft="22dp"
                android:textSize="13dp"
                android:text="@string/hdyc"/>

        </LinearLayout>
        <TextView
            android:id="@+id/tjcp"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginLeft="22dp"
            android:textSize="20dp"
            android:text="@string/tjcp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:orientation="horizontal"
            android:layout_marginLeft="17dp">
            <ImageButton
                android:id="@+id/baoma"
                android:layout_width="154dp"
                android:layout_height="103dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/o"/>
            <ImageButton
                android:id="@+id/benchi"
                android:layout_width="154dp"
                android:layout_height="103dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/w"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="17dp">
            <ImageButton
                android:id="@+id/baom"
                android:layout_width="154dp"
                android:layout_height="103dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/x"/>
            <ImageButton
                android:id="@+id/bench"
                android:layout_width="154dp"
                android:layout_height="103dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/y"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="17dp">
            <ImageButton
                android:id="@+id/bao"
                android:layout_width="154dp"
                android:layout_height="103dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/aa1"/>
            <ImageButton
                android:id="@+id/benc"
                android:layout_width="154dp"
                android:layout_height="103dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/bb1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="17dp">
            <ImageButton
                android:id="@+id/ba"
                android:layout_width="154dp"
                android:layout_height="103dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/cc1"/>
            <ImageButton
                android:id="@+id/ben"
                android:layout_width="154dp"
                android:layout_height="103dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/dd1"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
